--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>three.js - misc - octree collisions</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link type="text/css" rel="stylesheet" href="css/main.css">
+  <link type="text/css" rel="stylesheet" href="./css/main.css">
   <link rel="icon" href="data:,">
 
 </head>
@@ -20,13 +20,13 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "/build/three.module.js",
-        "three/addons/": "/jsm/"
+        "three": "./build/three.module.js",
+        "three/addons/": "./jsm/"
       }
     }
   </script>
 
   <!-- JS principal -->
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
